# pyonized

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  tox.ini
docs/: conf.py  index.rst  installing.rst  intensity_graphs.rst
licenses/: LICENSE.rst
pyonized/: __init__.py  balmerlines.py  example_mod.py  extinction.py
pyonized/data/: extinction_curve.txt
pyonized/tests/: test_example.py
