[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "pyonized"
description = "Python Package for Modeling Ionized Gas in 4D (3D Space + Velocity)"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "Sean D. Lam", email = "s_lam2023@coloradocollege.edu" },
  { name = "Dhanesh Krishnarao (DK)", email = "dkrishnarao@coloradocollege.edu" },
]
dependencies = [
  "numpy",
  "matplotlib",
  "astropy",
  "dustmaps",
  "scipy",
  "seaborn",
  "pyneb",
]
dynamic = ["version"]

[project.scripts]
open_astronomy_package_template_example = "pyonized.example_mod:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "numpydoc",
]
[project.urls]
repository = "https://github.com/Deech08/pyonized"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["pyonized._dev*"]

[tool.setuptools_scm]
write_to = "pyonized/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "pyonized",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "pyonized/__init*",
 "pyonized/conftest.py",
 "pyonized/*setup_package*",
 "pyonized/tests/*",
 "pyonized/*/tests/*",
 "pyonized/extern/*",
 "pyonized/version*",
 "*/pyonized/__init*",
 "*/pyonized/conftest.py",
 "*/pyonized/*setup_package*",
 "*/pyonized/tests/*",
 "*/pyonized/*/tests/*",
 "*/pyonized/extern/*",
 "*/pyonized/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
